<resources>
    <string name="app_name">Le Voyage</string>
    <string name="welcome_to_the_le_voyage_travel_application">Welcome to the Le Voyage travel applcation </string>
    <string name="username">Username</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="add_your_name">Add your name</string>
    <string name="email_address">Email address</string>
    <string name="save">SAVE</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>

</resources>